<resources>
    <string name="app_name">CalendarManager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    main page start-->
    <string name="title">日程备忘</string>
    <string name="title_of_calendar">%d年 %d月</string>
    <string name="button_today">今天</string>
    <string name="am">上午</string>
    <string name="pm">下午</string>
    <string name="not_schedule">没有日程</string>
    <!--    main page end-->
    <!--    form page start-->
    <string name="save">保存</string>
    <string name="edit">编辑</string>
    <string name="double_submit">请勿重复提交</string>
    <!--    form page end-->
    <!--    list page start-->
    <string name="title_of_list">日程列表</string>
    <string name="clear_all">一键清空</string>
    <string name="page_time_on_item">%s~%s</string>
    <!--    list page end-->
    <!--    form page start-->
    <string name="title_of_add">新建日程</string>
    <string name="title_of_edit">编辑日程</string>
    <string name="title_of_detail">日程详情</string>

    <string name="hint_of_title">请输入标题</string>
    <string name="form_title">标&#8195;&#8194;题</string>
    <string name="form_time_zone">时&#8195;&#8194;区</string>
    <string name="form_time">时&#8195;&#8194;间</string>
    <string name="start_time">开&#8195;&#8194;始</string>
    <string name="end_time">结&#8195;&#8194;束</string>
    <string name="form_repeat">重&#8195;&#8194;复</string>
    <string name="form_frequency">频&#8195;&#8194;次</string>
    <string name="time_zone_of_normal">GMT+8:00</string>
    <string name="all_of_day">全天</string>
    <string name="start">开始</string>
    <string name="end">结束</string>
    <string name="selected_for_start_time">开始时间选择</string>
    <string name="selected_for_end_time">结束时间选择</string>
    <string name="delete">删除</string>
    <!--    重复 list-->
    <string name="notRepeat">不重复</string>

    <!--    频次-->
    <string name="before_ten_minute">10分钟前</string>

    <!--    error tips for form submit-->
    <string name="check_time_tip">温馨提示</string>
    <string name="check_time_content">开始时间不得晚于结束时间</string>
    <string name="check_time_close">关闭</string>
    <string name="title_is_empty">标题不能为空</string>
    <string name="explain_message">应用需要权限</string>
    <string name="explain_ok">确定</string>
    <string name="forward_to_setting_message">请求权限</string>
    <!--    form page end-->

    <!--    alert dialog-->
    <string name="title_alert_dialog">温馨提示</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="tip_of_delete_all_schedule">确认清空所有日程记录吗？</string>
    <string name="tip_of_delete_schedule">确认删除该日程记录吗？</string>
</resources>