<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/height_780_px"
        android:layout_height="@dimen/px_568"
        android:background="@color/alert_dialog_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/tv_title_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_line_height"
            android:layout_marginTop="@dimen/px_120"
            android:background="@color/under_line"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_alert_dialog"
            android:textColor="@color/primary_of_font"
            android:textSize="@dimen/px_48"
            app:layout_constraintBottom_toBottomOf="@+id/tv_title_line"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_alert_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/px_60"
            android:gravity="center"
            android:textColor="@color/primary_of_font"
            android:textSize="@dimen/px_40"
            android:maxLines="3"
            android:ellipsize="end"
            app:layout_constraintBottom_toTopOf="@+id/tv_positive"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_line"
            tools:text="您有个会议即将开始您有个会议即将开始您有个会议即将开始您有个会议即将开开始您有个会议即将开始您有个会议即将开开始您有个会议即将开始您有个会议即将开始" />

        <TextView
            android:layout_width="@dimen/px_40"
            android:layout_height="@dimen/px_40"
            android:id="@+id/tv_left"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_line"/>

        <TextView
            android:layout_width="@dimen/px_40"
            android:layout_height="@dimen/px_40"
            android:id="@+id/tv_right"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_line"/>

        <Button
            android:id="@+id/tv_negative"
            android:layout_width="@dimen/px_300"
            android:layout_height="@dimen/px_100"
            android:layout_marginBottom="@dimen/px_60"
            android:background="@drawable/shape_alert_negative_btn"
            android:padding="0dp"
            android:text="@string/cancel"
            android:textColor="@color/primary_of_font"
            android:textSize="@dimen/px_40"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tv_positive" />

        <Button
            android:id="@+id/tv_positive"
            android:layout_width="@dimen/px_300"
            android:layout_height="@dimen/px_100"
            android:layout_marginBottom="@dimen/px_60"
            android:background="@drawable/shape_alert_btn"
            android:padding="0dp"
            android:text="@string/confirm"
            android:textColor="@color/primary_of_font"
            android:textSize="@dimen/px_40"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tv_negative"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>